# ziyy-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.txt  taplo.toml  test.zi  v2  ziyyc_core.rs
.github/workflows/: rust.yml
crates/: o.txt
crates/ziyy/: Cargo.toml
crates/ziyy-core/: Cargo.toml
crates/ziyy-core/src/: builtins.rs  document.rs  lib.rs  macros.rs  tree.rs
crates/ziyy-core/src/context/: mod.rs  state.rs
crates/ziyy-core/src/document/: display.rs  node.rs
crates/ziyy-core/src/error/: mod.rs
crates/ziyy-core/src/num/: mod.rs
crates/ziyy-core/src/parser/: chunk.rs  helpers.rs  mod.rs  open_and_close_tag.rs  tag.rs
crates/ziyy-core/src/renderer/: close_tag.rs  mod.rs  open_tag.rs  self_close_tag.rs
crates/ziyy-core/src/scanner/: macros.rs  mod.rs  token.rs  utils.rs
crates/ziyy-core/src/shared/: input.rs  mod.rs  position.rs  span.rs  value.rs
crates/ziyy-core/src/style/: mod.rs  style.md
crates/ziyy-core/src/style/color/: ansi256.rs  ansi_color.rs  mod.rs  rgb.rs
crates/ziyy-core/src/style/effect/: blink.rs  font.rs  frame.rs  intensity.rs  italics.rs  mod.rs  switch.rs  underline.rs
crates/ziyy-core/src/style/effect/color/: ansi256.rs  ansi_color.rs
crates/ziyy-core/tests/: colors_test.rs  errors_test.rs
crates/ziyy-proc/: Cargo.toml
crates/ziyy-proc/src/: lib.rs
crates/ziyy/src/: lib.rs  macros.rs  main.rs
rust/: Cargo.toml  bin.rs  help.txt  help.zi  out.txt  v2
rust/src/: lib.rs
rust/ziyy-core/benches/: style.rs
rust/ziyy-core/src/: lib.rs
rust/ziyy-core/src/color/: bit_4.rs  mod.rs  number.rs  rgb.rs
rust/ziyy-core/src/error/: mod.rs
rust/ziyy-core/src/num/: mod.rs
rust/ziyy-core/src/parser/: builtins.rs  close_tag.rs  helpers.rs  mod.rs  open_and_close_tag.rs  open_tag.rs  parse_chunk.rs  state.rs  tag.rs
rust/ziyy-core/src/scanner/: mod.rs  position.rs  span.rs  token.rs
rust/ziyy-core/src/style/: builder.rs  close.rs  condition.rs  convert.rs  mod.rs  style.rs  types.rs
rust/ziyy-core/src/style/effect/: blink.rs  font.rs  frame.rs  intensity.rs  italics.rs  mod.rs  switch.rs  underline.rs
rust/ziyy-core/src/style/effect/color/: ansi256.rs  ansi_color.rs  mod.rs  rgb.rs
rust/ziyy-proc/src/: lib.rs
src/: alias.rs  lib.rs  macros.rs  main.rs
ziyy-core/: Cargo.toml  README.md
ziyy-core/benches/: help.zy  parse.rs  style.rs
ziyy-core/src/: builtin.rs  error.rs  lib.rs
ziyy-core/src/document/: iter.rs  mod.rs
ziyy-core/src/error/: mod.rs
ziyy-core/src/indexer/: mod.rs
ziyy-core/src/parser/: chunk.rs  helpers.rs  mod.rs  open_tag.rs  parse_chunk.rs  tag.rs
ziyy-core/src/parser/ansi/: effect.rs  mod.rs
ziyy-core/src/parser/color/: mod.rs
ziyy-core/src/parser/tag_parser/: mod.rs  tag.rs
ziyy-core/src/parser/word_parser/: mod.rs
ziyy-core/src/resolver/: mod.rs
ziyy-core/src/resolver/document/: iter.rs  mod.rs  node.rs
ziyy-core/src/scanner/: mod.rs  token.rs
ziyy-core/src/splitter/: fragment.rs  mod.rs
ziyy-core/src/style/: ansi.rs  mod.rs  raw_style.rs
ziyy-core/src/style/effect/: blink.rs  font.rs  frame.rs  intensity.rs  italics.rs  underline.rs
ziyy-core/src/style/effect/color/: rgb.rs
ziyy-core/tests/: colors_test.rs
ziyy-proc/: Cargo.toml
ziyy-proc/src/: lib.rs
