[package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Markup Language."
edition     = "2021"
keywords    = ["terminal", "html", "style", "rgb", "cli"]
license     = "MIT OR Apache-2.0"
name        = "ziyy"
readme      = "../README.md"
repository  = "https://github.com/alMukaafih/ziyy.git"
resolver    = "2"
version     = "2.0.0-beta.2"

[package.metadata.docs.rs]
features     = ["tag", "source"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["crates/*"]

[dependencies]
getopts = "0.2.24"
terminal_size = "0.4.3"
ziyy-core = { path = "crates/ziyy-core" }
ziyy-proc = { path = "crates/ziyy-proc" }
