[package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Markup Language."
edition     = "2024"
keywords    = ["terminal", "ansi", "style", "html", "cli"]
license     = "MIT OR Apache-2.0"
name        = "ziyy"
readme      = "README.md"
repository  = "https://github.com/ziyy-dev/ziyy-rs.git"
version     = "2.0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
members = ["crates/*"]

[dependencies]
getopts       = "0.2.24"
terminal_size = "0.4.3"
ziyy-core     = { path = "crates/ziyy-core", version = "0.1.4" }
ziyy-proc     = { path = "crates/ziyy-proc", version = "0.1.0" }
