[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Styling using HTML-like syntax."
edition     = "2024"
keywords    = ["terminal", "ansi", "style", "html", "cli"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/ziyy-dev/ziyy-rs.git"

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = "symbols"
