[package]
name = "ziyy-core"
version = "0.1.3"
repository = "https://github.com/ziyy-dev/ziyy-rs.git"
edition = "2024"
description = "Terminal Styling using HTML-like syntax."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "ansi", "style", "html", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = []
unstable = []
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.10.0", optional = true }

[[bench]]
name = "style"
required-features = ["unstable"]

[[test]]
name = "colors_test"
required-features = ["unstable"]
