[package]
name = "ziyy-proc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "ansi", "style", "html", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
ziyy-core = { path = "../ziyy-core", version = "0.1.1" }
