[package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Styling using HTML-like syntax."
edition     = "2024"
keywords    = ["terminal", "ansi", "style", "html", "cli"]
license     = "MIT OR Apache-2.0"
name        = "ziyy-core"
repository  = "https://github.com/ziyy-dev/ziyy-rs.git"
version     = "0.1.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "ziyy_core"
path = "src/lib.rs"

[features]
bindings = []
default  = ["bindings"]
uncommon = []

[dependencies]
ego-tree = "0.10.0"
smallvec = "1.15.1"
terminfo = { version = "0.9.0", optional = true }
