[package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Styling using HTML-like syntax."
edition     = "2024"
keywords    = ["terminal", "ansi", "style", "html", "cli"]
license     = "MIT OR Apache-2.0"
name        = "ziyy-core"
repository  = "https://github.com/ziyy-dev/ziyy-rs.git"
version     = "0.1.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "ziyy_core"
path = "src/lib.rs"

[[test]]
name              = "colors_test"
required-features = ["tree"]

[features]
bindings = []
default  = ["bindings", "tree"]
full     = ["bindings", "tree", "uncommon"]
tree     = ["dep:ego-tree"]
uncommon = []

[dependencies]
ego-tree = { version = "0.10.0", optional = true }
smallvec = { version = "1.15.1" }
terminfo = { version = "0.9.0", optional = true }
