[package]
name                  = "ziyy-core"
version               = "0.1.4"
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "ziyy_core"
path = "src/lib.rs"

[[test]]
name              = "colors_test"
required-features = ["tree"]

[features]
bindings = []
default  = ["bindings", "tree"]
full     = ["bindings", "tree", "uncommon"]
tree     = ["dep:ego-tree"]
uncommon = []

[dependencies]
ego-tree = { version = "0.10.0", optional = true }
smallvec = { version = "1.15.1" }
terminfo = { version = "0.9.0", optional = true }
