[package]
name                  = "ziyy-proc"
version               = "0.1.0"
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

[lib]
proc-macro = true

[dependencies]
quote     = "1.0.40"
syn       = { version = "2.0.104", features = ["full"] }
ziyy-core = { path = "../ziyy-core", version = "0.1.4" }
