[package]
categories  = ["command-line-interface", "command-line-utilities"]
description = "Terminal Styling using HTML-like syntax."
edition     = "2024"
keywords    = ["terminal", "ansi", "style", "html", "cli"]
license     = "MIT OR Apache-2.0"
name        = "ziyy"
readme      = "README.md"
repository  = "https://github.com/ziyy-dev/ziyy-rs.git"
version     = "2.0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
bindings = ["ziyy-core/bindings"]
default  = ["bindings"]
full     = ["bindings", "tree", "uncommon"]
terminfo = ["ziyy-core/terminfo"]
tree     = ["ziyy-core/tree"]
uncommon = ["ziyy-core/uncommon"]

[dependencies]
getopts   = { version = "0.2.24" }
ziyy-core = { path = "../ziyy-core", version = "0.1.4" }
ziyy-proc = { path = "../ziyy-proc", version = "0.1.0" }
