[package]
name                  = "ziyy"
version               = "2.0.3"
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
bindings = ["ziyy-core/bindings"]
default  = ["bindings", "tree"]
terminfo = ["ziyy-core/terminfo"]
tree     = ["ziyy-core/tree"]
uncommon = ["ziyy-core/uncommon"]

[dependencies]
getopts   = { version = "0.2.24" }
ziyy-core = { path = "../ziyy-core", version = "0.1.4" }
ziyy-proc = { path = "../ziyy-proc", version = "0.1.0" }
